Use bounds instead of centre. Add a default value for the history field when it gets cleared.

--- a/Calculator/Base.lproj/Main.storyboard
+++ b/Calculator/Base.lproj/Main.storyboard
@@ -646,6 +646,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="XZj-pz-JhR"/>
+        <segue reference="DQv-ci-FbS"/>
     </inferredMetricsTieBreakers>
 </document>
